# weather-site

./: .env.default  .pre-commit-config.yml  README.md  docker-compose.yaml  pyproject.toml
config/: logging_config.py  settings.py  urls.py
core/: exceptions.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  city_model.py
core/repository/: __init__.py  base_repository.py  city_repository.py  django_orm_repository.py
core/repository/base/: __init__.py  django_orm_repository.py
core/service/: __init__.py  weather_service.py  yandex_api_service.py
core/utils/: __init__.py  api_client.py
db_initial/: dump.sql
nginx/: Dockerfile  nginx.conf
weather_api_app/: urls.py
weather_site/: .dockerignore  .env.default  Dockerfile  pyproject.toml  requirements.txt
weather_site/config/: logging_config.py  settings.py  urls.py
weather_site/core/: exceptions.py
weather_site/core/repository/: city_repository.py
weather_site/core/service/: weather_service.py  yandex_api_service.py
weather_site/weather_api_app/: apps.py  serializers.py  views.py
weather_site/weather_template_app/static/css/: main.css
weather_template_app/: apps.py  urls.py  views.py
weather_template_app/static/js/: index.js
weather_template_app/templates/: base.html  index.html
