[tool.poetry]
name = "weather-site"
version = "1.0.0"
description = "Тестовое задание по работе с api Яндекс.Погода"
authors = ["Nickolay Obukhov <obuhoff2016@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
gunicorn = "^23.0.0"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
